syntax = "proto3";

package greet;

option go_package = "github.com/kjasuquo/grpc/greet/proto";

message GreetRequest {
  string first_name = 1;
}

message GreetResponse{
  string result = 1;
}

service GreetService{
  rpc Greet (GreetRequest) returns (GreetResponse);
  rpc GreetManyTime (GreetRequest) returns (stream GreetResponse);
  rpc LongGreet (stream GreetRequest) returns (GreetResponse);
  rpc GreetEveryone (stream GreetRequest) returns (stream GreetResponse);
}


// for addition
message AddRequest{
  int32 first_num = 1;
  int32 second_num = 2;
}

message AddResponse{
  int32 answer = 1;
}

service AddService{
  rpc Add(AddRequest) returns (AddResponse);
}